# ehr

./: README.md  pyproject.toml  requirements.txt  setup.py
ehr_library/: core.py  session.py
examples/: basic_usage.py
src/: core.py  session.py
